--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,33 @@
   "java.project.referencedLibraries": [
     "lib/**/*.jar",
     "dependencies/jfreechart-1.5.0.jar",
-    "dependencies/mysql-connector-j-8.0.31.jar"
+    "dependencies/mysql-connector-j-8.0.31.jar",
+    "dependencies/commons-math4-core-4.0-beta1.jar",
+    "dependencies/commons-math4-legacy-4.0-beta1.jar",
+    "dependencies/commons-math4-legacy-core-4.0-beta1.jar",
+    "dependencies/commons-math4-legacy-exception-4.0-beta1.jar",
+    "dependencies/commons-math4-transform-4.0-beta1.jar",
+    "dependencies/commons-math4-neuralnet-4.0-beta1.jar",
+    "dependencies/commons-statistics-distribution-1.0.jar",
+    "dependencies/commons-io-2.11.0.jar",
+    "dependencies/org.apache.commons.collections_3.2.2.v20220405-1659.jar",
+    "dependencies/commons-math4-core-4.0-beta1-javadoc.jar",
+    "dependencies/commons-math4-core-4.0-beta1-sources.jar",
+    "dependencies/commons-math4-legacy-4.0-beta1-javadoc.jar",
+    "dependencies/commons-math4-legacy-4.0-beta1-sources.jar",
+    "dependencies/commons-math4-legacy-core-4.0-beta1-javadoc.jar",
+    "dependencies/commons-math4-legacy-core-4.0-beta1-sources.jar",
+    "dependencies/commons-math4-legacy-exception-4.0-beta1-javadoc.jar",
+    "dependencies/commons-math4-legacy-exception-4.0-beta1-sources.jar",
+    "dependencies/commons-math4-neuralnet-4.0-beta1-javadoc.jar",
+    "dependencies/commons-math4-neuralnet-4.0-beta1-sources.jar",
+    "dependencies/commons-math4-transform-4.0-beta1-javadoc.jar",
+    "dependencies/commons-math4-transform-4.0-beta1-sources.jar",
+    "dependencies/commons-math3-3.6.1.jar",
+    "dependencies/commons-math3-3.6.1-javadoc.jar",
+    "dependencies/commons-math3-3.6.1-sources.jar",
+    "dependencies/commons-math3-3.6.1-tests.jar",
+    "dependencies/commons-math3-3.6.1-test-sources.jar",
+    "dependencies/commons-math3-3.6.1-tools.jar"
   ]
 }
