--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,15 @@
     "dependencies/commons-math3-3.6.1-test-sources.jar",
     "dependencies/commons-math3-3.6.1-tools.jar",
     "dependencies/Backuop/**/*.jar",
-    "dependencies/backup/**/*.jar"
+    "dependencies/backup/**/*.jar",
+    "dependencies/Backup/commons-io-2.11.0.jar",
+    "dependencies/Backup/commons-math4-core-4.0-beta1.jar",
+    "dependencies/Backup/commons-math4-legacy-4.0-beta1.jar",
+    "dependencies/Backup/commons-math4-legacy-core-4.0-beta1.jar",
+    "dependencies/Backup/commons-math4-legacy-exception-4.0-beta1.jar",
+    "dependencies/Backup/commons-math4-neuralnet-4.0-beta1.jar",
+    "dependencies/Backup/commons-math4-transform-4.0-beta1.jar",
+    "dependencies/Backup/commons-statistics-distribution-1.0.jar",
+    "dependencies/Backup/org.apache.commons.collections_3.2.2.v20220405-1659.jar"
   ]
 }
